<resources>
    <string name="service_not_running">Service not running</string>
    <string name="cancel">Cancel</string>
    <string name="service_not_running_description">Notification service is not running. You must enable it to get this app to work!</string>
    <string name="open_settings">Open Settings</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="global_settings">Global settings</string>
    <string name="user_apps">User apps</string>
    <string name="system_apps">System apps</string>
    <string name="category_general">General</string>
    <string name="category_about">About</string>
    <string name="installed_version">Installed version</string>
    <string name="donate">Donate</string>
    <string name="donate_description">Buy me a Coke if you really like my app!</string>
    <string name="default_app_settings">Default app settings</string>
    <string name="tap_vibration_pattern">Tap vibration pattern</string>
    <string name="test_on_phone">Test on phone</string>
    <string name="test_on_watch">Test on watch</string>
    <string name="tap_here">Tap here</string>
    <string name="finish_tapping">Finish tapping</string>
    <string name="invalid_vibration_pattern">Invalid vibration pattern.</string>
    <string name="vibration_pattern_help">Pattern is in format \n\'pauseTime, vibrateTime, pauseTime, vibrateTime, pauseTime …\', where times are in milliseconds.\n\nFor example \'0, 100, 200, 300\' will vibrate for 100 ms, then wait 200 ms and then again vibrate for 300 ms.\n\nIf you are using alarm mode, make sure to add pause on the end of the pattern, otherwise watch won\'t pause between pattern repeats.</string>
    <string name="tips_and_tricks">Tips and tricks</string>
    <string name="tip_per_app_description">You can set most settings differently for each application.\n\nFor starters, you can only set default app settings which apply to every app that does not have different settings specified (so all apps in beginning), and then tweak different apps separately.\n\nUse this to for example set different vibrations for different apps to distinguish them without looking or to mute unwanted apps.</string>
    <string name="add">Add</string>
    <string name="vibrations_muted_notification_title">Wear vibrations muted</string>
    <string name="vibrations_muted_notification_explanation">Dismiss this notification to unmute.</string>
    <string name="getting_watch_logs">Getting logs from the watch…</string>
    <string name="get_support">Get support</string>
    <string name="no_email_app_found">No email application found.</string>
    <string name="log_sending_failed">Log sending failed</string>
    <string name="log_retrieval_failed">Failed to retrieve log data from the watch. Check the watch connection and retry.</string>
    <string name="support_email">mailto:matejdro+support@gmail.com</string>
    <string name="get_support_description">Send application logs to the developer for the support</string>
    <string name="tasker_start_alarm">Start on-watch alarm</string>
    <string name="tasker_start_alarm_with_name">Start on-watch alarm %1$s</string>
    <string name="tasker_global_settings">Change global settings</string>
    <string name="tasker_default_app_settings">Change default app settings</string>
    <string name="tasker_user_app_settings">Change user app settings</string>
    <string name="tasker_system_app_settings">Change system app settings</string>
    <string name="background_image">Background image</string>
    <string name="displayed_text">Displayed text</string>
    <string name="icon">Icon</string>
    <string name="tasker_actions_title">Vibration Center Tasker action</string>
    <string name="tasker_change_specific_app">Change %1$s settings</string>
    <string name="category_expert">Expert settings</string>
    <string name="licenses">Open source licenses</string>
    <string name="cancel_mute">Cancel mute</string>
    <string name="required_permission">Required permission</string>
    <string name="logs_storage_permission_explanation">To save logs, Vibration Center needs storage permission first.</string>
    <string name="logs_attachment">Logs attachment</string>
    <string name="logs_attachment_explanation">If not automatically attached, please manually
        attach VibrationCenterLogs.log_zip from the phone\'s internal storage to the created e-mail.\n\nFeel free
        to delete the
        file after sending it.</string>
</resources>
